# devops-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: go-to-market.md
src/devops_mcp/: __init__.py  server.py
src/devops_mcp/tools/: aws.py  azure.py  gcp.py  github_actions.py  jenkins.py  kubernetes.py  servicenow.py  slack.py  teams.py
tests/: conftest.py  test_aws.py  test_azure.py  test_gcp.py  test_github_actions.py  test_jenkins.py  test_kubernetes.py  test_server.py  test_servicenow.py  test_slack.py  test_teams.py
