[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devops-mcp"
version = "0.1.0"
description = "MCP server that gives Claude live access to your DevOps stack"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "devops", "kubernetes", "jenkins", "aws", "llm", "claude", "sre", "platform-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "kubernetes>=29.0.0",
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
devops-mcp = "devops_mcp.server:main"

[project.urls]
Homepage = "https://github.com/gerardrecinto/devops-mcp"
Repository = "https://github.com/gerardrecinto/devops-mcp"
Issues = "https://github.com/gerardrecinto/devops-mcp/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
